Imps: 1. more java 17 features used